[gd_scene load_steps=3 format=3 uid="uid://cb1ubnj2stph8"]

[ext_resource type="Script" path="res://Scripts/CardGraphic.gd" id="1_laigs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xohvm"]
bg_color = Color(0.380392, 0.380392, 0.380392, 1)

[node name="CardGraphic" type="Control"]
custom_minimum_size = Vector2(186, 248)
layout_direction = 1
layout_mode = 3
anchor_right = 0.161
anchor_bottom = 0.383
offset_right = 0.527985
offset_bottom = -0.184006
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_laigs")

[node name="CardBG" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(125, 175)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xohvm")

[node name="MarginContainer" type="MarginContainer" parent="CardBG"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CardBG/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CardBG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.6

[node name="NamePanel" type="Panel" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer2/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer2/NamePanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 17
text = "Name"

[node name="EnergyPanel" type="Panel" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="MarginContainer" type="MarginContainer" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer2/EnergyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer2/EnergyPanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 17
text = "En:"

[node name="StatsPanel" type="Panel" parent="CardBG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CardBG/MarginContainer/VBoxContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CardBG/MarginContainer/VBoxContainer/StatsPanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 17
text = "Stats"

[node name="DescPanel" type="Panel" parent="CardBG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CardBG/MarginContainer/VBoxContainer/DescPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CardBG/MarginContainer/VBoxContainer/DescPanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 17
text = "Description"

[node name="HBoxContainer" type="HBoxContainer" parent="CardBG/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="IconPanel" type="Panel" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer/IconPanel"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PLACE"

[node name="Button" type="Button" parent="CardBG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "DELETE"

[connection signal="pressed" from="CardBG/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_pressed"]
[connection signal="pressed" from="CardBG/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_delete_pressed"]
